# ws_s

./: .gitignore  Bz.def  Cargo.toml  build.rs  readme.md
additional/: index.html
examples/: axum_upgrade.rs  custom_encoder.rs  deref.rs  parse_inputs.rs  tui.rs  validate_uuid.rs
front/: app.vue  nuxt.config.ts  package.json
front/components/: ComponentAppList.vue  FlexFrame.vue  FlexPane.vue  SseReceiver.vue  TabSync.vue  chat_front.vue
front/composables/: wasm_test.ts  websocket.ts
front/pages/: additional.vue  index.vue
front/types/: index.ts
message-pack/: Cargo.toml
message-pack-wasm/: Cargo.toml  build.bat
message-pack-wasm/src/: lib.rs
message-pack/src/: lib.rs
src/: client.rs  main.rs  server.rs
src/utils/: mod.rs  parsing.rs
