[package]
name = "ws_s"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
anyhow = "1.0.94"
futures-util = "0.3.31"
log = "0.4.22"
tokio = { version = "1.42.0", features = ["full"] }
tokio-tungstenite = "0.24.0"
futures-channel = "0.3.31"
uuid = { version = "1.11.0", features = ["v4"] }
message-pack = { path = "message-pack" }
random_name_generator = "0.3.6"
rfd = "0.15.1"
crossterm = "0.28.1"
atty = "0.2.14"
simple_logger = "5.0.0"
axum = { version = "0.7.9", features = ["ws"] }
tower = "0.5.1"
tower-http = { version = "0.6.2", features = ["cors", "fs"] }


[build-dependencies]
fs_extra = "1.3.0"